<resources>
    <string name="app_name" translatable="false">Banzo</string>

    <string name="selecione_o_idioma_que_deja_aprender">Selecione o idioma que deja aprender</string>
    <string name="escolha_seu_nivel_de_1_s">Selecione seu nível actual de %1$s</string>
    <string name="comece_a_aprender">Comece a aprender</string>
    <string name="selecionar">Selecionar</string>
    <string name="muito_bem_vamos_come_ar_com_o_treinamento_de_hoje">Muito bem! Vamos começar com o treinamento de hoje.</string>
    <string name="iniciar">Iniciar</string>
    <string name="voce_tem_quatro_palavras_para_revisar">Vamos treinar mais as palavras aprendidas.</string>
    <string name="voce_tem_palavras_novas_para_aprender">Esta um bom dia para aprender, vamos estudar novas palavras novas hoje.</string>
    <string name="palavras_estao_sendo_aprendidas">Palavras estão sendo aprendidas</string>
    <string name="prefs_username" translatable="false">prefs_username</string>
    <string name="prefs_remove_account" translatable="false">prefs_remove_account</string>
    <string name="prefs_learned_words" translatable="false">prefs_learned_words</string>
    <string name="prefs_rate_app" translatable="false">prefs_rate_app</string>
    <string name="prefs_share_app" translatable="false">prefs_share_app</string>
    <string name="prefs_max_daily_words" translatable="false">prefs_max_daily_words</string>
    <string name="palavras_aprendidas_estarao_aqui">Palavras aprendidas estarao aqui!</string>
    <string name="palavras_desafiadoras_encontradas">%1$s palavras desafiadoras encontradas.</string>
    <string name="train">Treino</string>
    <string name="quanto_mais_treinar_mais_palavras_vai_aprender">Quanto mais treinar, mais palavras vai aprender.</string>
    <string name="voce_est_se_saind_muito_bem">Voce esta se saindo muito bem. Mantem o ritmo de aprendizagem!</string>
    <string name="momento_de_intervalo">Momento de intervalo, voltaremos dentro de alguns minutos!</string>
    <string name="learned_words">Palavras aprendidas</string>
    <string name="digite_um_comentario">Digite um comentário</string>
    <string name="selecione_um_clube_e_comece_a_conversar">Selecione um clube, e comece a conversar</string>
    <string name="entre_com_uma_conta_google_para_come_ar">Entre com uma conta Google para começar</string>
    <string name="voc_pode_conversar_com_outros_usu_rios_e_aprender_mais">Você pode conversar com outros usuários, e aprender mais.</string>
    <string name="total_de_palavras_aprendidas">Total de palavras aprendidas</string>
    <string name="nivel_de_aprendizagem">Nivel de aprendizagem</string>
    <string name="complete_as_tarefas_para_aprender_as_palavras">Complete as tarefas para aprender as palavras!</string>
    <string name="instale_a_versao_completa_aprenda_mais_rapido_com_12_palavras_por_dia_e_sem_anuncios">Instale a Versao completa, aprenda mais rapido com 12 palavras por dia e sem anuncios.</string>
    <string name="instalar_premium">Instalar Premium</string>
    <string name="ignorar_palavra">Ignorar palavra</string>
    <string name="preparado">Preparado</string>
    <string name="resultado">Resultado</string>
    <string name="leia_atentamente_estas_palavras">Leia atentamente estas palavras</string>
    <string name="select_translation">Selecione a tradução</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="aprender">Aprender</string>
    <string name="clubes">Clubes</string>
    <string name="defini_es">Definições</string>
    <string name="Beginner">Iniciante</string>
    <string name="Intermediate">Intermediario</string>
    <string name="Advanced">Avançado</string>
</resources>
